# user/main.go
@@ -5,10 +5,11 @@ import (
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	"github.com/leon123858/tsmc-meal-order/user/controller"
-	_ "github.com/leon123858/tsmc-meal-order/user/docs"
+	"github.com/leon123858/tsmc-meal-order/user/docs"
 	"github.com/leon123858/tsmc-meal-order/user/service"
 	"github.com/leon123858/tsmc-meal-order/user/utils"
 	echoSwagger "github.com/swaggo/echo-swagger"
+	"os"
 )
 
 func init() {
@@ -19,7 +20,7 @@ func init() {
 }
 
 //	@title			meal order user API
-//	@version		1.0
+//	@version		3.0
 //	@description	this the user service for meal order system
 
 //	@contact.name	Leon Lin
@@ -27,6 +28,7 @@ func init() {
 //	@license.name	Apache 2.0
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 
+// @schemes http https
 // @host		127.0.0.1:8080
 // @BasePath	/api/user
 func main() {
@@ -38,6 +40,10 @@ func main() {
 
 	e.Validator = &utils.CustomValidator{Validator: validator.New()}
 
+	if os.Getenv("APP_ENV") == "production" {
+		e.Debug = false
+		docs.SwaggerInfo.Host = utils.GcpRunUrlHost
+	}
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
 
 	apiGroup := e.Group("/api/user")
@@ -47,7 +53,7 @@ func main() {
 	apiGroup.POST("/update", controller.UpdateUser)
 	apiGroup.POST("/login", controller.Login)
 
-	apiGroup.POST("/sync", controller.SyncEventMessage)
+	apiGroup.POST("/sync/:event", controller.SyncEventMessage)
 
 	e.Logger.Fatal(e.Start(":8080"))
 }
